fix: backend bugs